--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
 <head>
 
+    <h1>Erilaisia koirarotuja</h1>
+    <h2>iso koira!</h2>
 <img src="assets/pictures/koira1.png" alt="Koira1">
-<img src="assets/pictures/koira2.png" alt="koira2">
+<h2>pörröinen koira</h2>
+<img src="assets/pictures/koira2.png" alt="koira2" >
+<h2>australianpaimenkoira</h2>
 <img src="assets/pictures/koira3.png" alt="Koira3">
+<h3>pikkukoira </h3>
+<img src="assets/pictures/koira4.png" alt="Koira4" class="image1">
 
 
 </head>
